syntax = "proto3";

package room;

import "common/protobuf/client/client.proto";
import "common/protobuf/server/server.proto";
import "common/protobuf/common/struct.proto";

// 방 입장 요청 패킷
message C2L_EnterRoom {
  client.C2S_Metadata meta = 1;
  uint64 roomId = 2;       // 입장하려는 Room ID
}

// 방 입장 응답 패킷(신규 유저)
message L2C_EnterRoomNewUser {
  server.S2C_Metadata meta = 1;    // 공통 응답 메타 데이터
  bool isEntered = 2;       // 방 입장 성공 여부
  repeated common.UserInfo users = 3;  // 방에 있는 기존 유저 정보
}

//방 입장 응답 패킷(기존 유저)
message L2C_EnterRoomExistUser {
  server.S2C_Metadata meta = 1;    // 공통 응답 메타 데이터
  common.UserInfo newUser = 2;       // 신규 유저 정보
}